<resources>
    <string name="app_name">"Inventory App"</string>
    <string name="empty_view_title_text">There are no inventories</string>
    <string name="empty_view_subtitle_text">Get started by adding an inventory or insert preset inventories</string>
    <string name="action_save">Save</string>
    <string name="editor_insert_inventory_successful">Inventory saved</string>
    <string name="editor_insert_inventory_failed">Error with saving inventory</string>
    <string name="editor_update_inventory_successful">Inventory updated</string>
    <string name="editor_update_inventory_failed">Error with updating inventory</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_inventory_successful">Inventory deleted</string>
    <string name="editor_delete_inventory_failed">Error with deleting inventory</string>
    <string name="delete_dialog_msg">Delete this inventory?</string>
    <string name="cancel">Cancel</string>
    <string name="hint_inventory_title">Title</string>
    <string name="hint_inventory_supplier">Supplier</string>
    <string name="hint_inventory_supplier_email">Email</string>
    <string name="hint_inventory_image">Image</string>
    <string name="hint_inventory_quantity">Quantity</string>
    <string name="hint_inventory_price">Price</string>
    <string name="hint_inventory_select_image">Select Image</string>
    <string name="quantity_title">Quantity</string>
    <string name="insert">Insert</string>
    <string name="delete">Delete</string>
    <string name="order">Order More</string>
    <string name="minus">-</string>
    <string name="plus">+</string>

    <string-array name="inventories">
    <item>
        "{
        \"title\":\"Raspberry Pi 3 Model B\",
        \"supplier\":\"Raspberry Pi Foundation\",
        \"supplier_email\":\"liz@raspberrypi.org\",
        \"image\":\"placeholder\",
        \"quantity\":\"57\",
        \"price\":\"29.99\"
        }"
    </item>
        <item>
        "{
        \"title\":\"Raspberry Pi 2 Model B\",
        \"supplier\":\"Raspberry Pi Foundation\",
        \"supplier_email\":\"liz@raspberrypi.org\",
        \"image\":\"placeholder\",
        \"quantity\":\"89\",
        \"price\":\"29.09\"
        }"
    </item>
        <item>
        "{
        \"title\":\"Raspberry Pi 1 Model A+\",
        \"supplier\":\"Raspberry Pi Foundation\",
        \"supplier_email\":\"liz@raspberrypi.org\",
        \"image\":\"placeholder\",
        \"quantity\":\"73\",
        \"price\":\"18.49\"
        }"
    </item>
         <item>
        "{
        \"title\":\"Raspberry Pi Zero\",
        \"supplier\":\"Raspberry Pi Foundation\",
        \"supplier_email\":\"liz@raspberrypi.org\",
        \"image\":\"placeholder\",
        \"quantity\":\"11\",
        \"price\":\"16.99\"
        }"
    </item>
    </string-array>

</resources>
