<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mytr.inventoryapp.DetailActivity">

    <ImageView
        android:id="@+id/inventory_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/hint_inventory_image"
        android:paddingBottom="@dimen/activity_horizontal_margin" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginEnd="@dimen/activity_margin"
            android:layout_marginRight="@dimen/activity_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/inventory_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#2B3D4D"
                tools:text="Inventory Name" />

            <TextView
                android:id="@+id/inventory_supplier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#AEB6BD"
                tools:text="@string/hint_inventory_supplier" />
        </LinearLayout>

        <TextView
            android:id="@+id/inventory_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="right"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2B3D4D"
            tools:text="@string/hint_inventory_price" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/clickable_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/quantity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:text="@string/quantity_title"
            android:textAllCaps="true"
            android:textColor="#AEB6BD"
            android:textSize="14sp" />
        <LinearLayout
            android:layout_alignParentRight="true"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/minus_btn"
                android:layout_width="44dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/minus" />
            <TextView
                android:id="@+id/quantity"
                android:layout_width="44dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#2B3D4D"
                tools:text="100" />
            <Button
                android:id="@+id/plus_btn"
                android:layout_width="44dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/plus" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_horizontal_margin">

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete" />

        <Button
            android:id="@+id/btn_order_more"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order" />

    </RelativeLayout>
</LinearLayout>
