<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <RelativeLayout
        android:id="@+id/clickable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_horizontal_margin">
        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginEnd="@dimen/activity_margin"
            android:layout_marginRight="@dimen/activity_margin"
            android:orientation="vertical">
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#2B3D4D"
                tools:text="@string/hint_inventory_title" />
            <TextView
                android:id="@+id/supplier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#AEB6BD"
                tools:text="@string/hint_inventory_supplier" />
        </LinearLayout>
        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="right"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2B3D4D"
            tools:text="@string/hint_inventory_price" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/clickable_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/quantity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:text="@string/quantity_title"
            android:textAllCaps="true"
            android:textColor="#AEB6BD"
            android:textSize="14sp" />
        <LinearLayout
            android:layout_toRightOf="@id/quantity_title"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/minus_btn"
                android:layout_width="44dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/minus" />
            <TextView
                android:id="@+id/quantity"
                android:layout_width="44dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#2B3D4D"
                tools:text="100" />
            <Button
                android:id="@+id/plus_btn"
                android:layout_width="44dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/plus" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
